--- a/src/Login.css
+++ b/src/Login.css
@@ -25,7 +25,7 @@ body {
     border-radius: 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    max-width: 304px;
+    max-width: 350px;
     width: 100%;
     line-height: 1.357;
     margin-top: 60px;
@@ -71,7 +71,7 @@ body {
   }
   
   .login-box button:hover {
-    background-color: #0056b3;
+    background-color:  #3f51b5; 
   }
 
   .login-box img{
